--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,14 @@
 @import "tw-animate-css";
 @import 'shadcn-prose';
 
+@font-face {
+    font-family: 'trebucbd';
+    src: url('/trebucbd.ttf');
+}
+@theme {
+  --font-trebuchet: 'trebucbd';
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
